--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,8 +1,3 @@
-<?php include '../getProjectData.php'; ?>
-<?php
-    $temp_time = microtime()
-?>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +7,7 @@
     <title>Levi Sutton</title>
 
 
-    <link rel="stylesheet" href=<?php echo '"../css/portfolio.css?v'.$temp_time.'"'?>>
+    <link rel="stylesheet" href="../css/portfolio.css"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -31,11 +26,8 @@
         <input id=projectData name=projectData style="display: none;" />
     </div>
 
-    <!-- Script to set label data from JSON -->
-    <?php include '../projectData.php'; ?>
-
-    <script  type="text/babel" src=<?php echo '"../js/portfolio.js?v'.$temp_time.'"'?>></script>
-    <script  type="text/babel" src=<?php echo '"../js/project.js?v'.$temp_time.'"'?>></script>
+    <script  type="text/babel" src="../js/portfolio.js"></script>
+    <script  type="text/babel" src="../js/project.js"></script>
 
 </body>
 
