--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,7 +7,7 @@
     <title>Levi Sutton</title>
 
 
-    <link rel="stylesheet" href="../css/portfolio.css"/>
+    <link rel="stylesheet" href="../css/portfolio.css?v10"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
