Adding pop state

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="lib/react/react.min.js"></script>
     <script src="lib/react/react-dom.min.js"></script>
 
-    <script src="js/portfolio.js" type="text/babel"></script>
+    <script src="js/portfolio.js?v10" type="text/babel"></script>
     <script src="js/home.js" type="text/babel"></script>
     <script src="js/main.js" type="text/babel"></script>
 
