--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -26,8 +26,8 @@
         <input id=projectData name=projectData style="display: none;" />
     </div>
 
-    <script  type="text/babel" src="../js/portfolio.js"></script>
-    <script  type="text/babel" src="../js/project.js"></script>
+    <script  type="text/babel" src="../js/portfolio.js?v10"></script>
+    <script  type="text/babel" src="../js/project.js?v10"></script>
 
 </body>
 
