--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Levi Sutton</title>
 
-    <link rel="stylesheet" href="css/portfolio.css?v10"/>
-
+    <link rel="stylesheet" href="css/portfolio.css?v20"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <script src="lib/jquery-3.2.1/jquery3.2.1.min.js"></script>
@@ -16,17 +15,29 @@
     <script src="lib/react/react.min.js"></script>
     <script src="lib/react/react-dom.min.js"></script>
 
-    <script src="js/portfolio.js?v10" type="text/babel"></script>
-    <script src="js/home.js" type="text/babel"></script>
-    <script src="js/main.js" type="text/babel"></script>
-
 </head>
 
 <body>
-
-    <div id="main">
-
+    <div id="loader" class="preloader">
+        <div class="loader">
+          <div>
+            <img src="img/loader.png" />
+            <svg>
+              <rect></rect>
+            </svg>
+          </div>
+        </div>  
     </div>
+
+    <script type="text/javascript">
+
+        $(document).ready(function() {
+            setTimeout(function(){
+            window.location.href = "pages/main.html"
+            }, 4500);
+        });
+        
+    </script>
 
 </body>
 </html>
