--- a/pages/main.html
+++ b/pages/main.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,17 +16,14 @@
     <script src="../lib/react/react.min.js"></script>
     <script src="../lib/react/react-dom.min.js"></script>
 
-    <script  type="text/babel" src="../js/portfolioMain.js"></script>
-    <script  type="text/babel" src="../js/project.js?v13"></script>
-    
+    <script src="../js/home.js?v18" type="text/babel"></script>
+    <script src="../js/main.js?v18" type="text/babel"></script>
+        
 </head>
 
 <body>
 
-    <div id="portfolioMain" class="portfolio-container-wrapper">
-        <!-- JSON Data -->
-        <input id=projectData name=projectData style="display: none;" />
-    </div>
+    <div id="main"></div>
 
 </body>
 
