Updated project imgs

--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -7,7 +7,7 @@
     <title>Levi Sutton</title>
 
 
-    <link rel="stylesheet" href="../css/portfolio.css?v20"/>
+    <link rel="stylesheet" href="../css/portfolio.css?v22"/>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -17,8 +17,8 @@
     <script src="../lib/react/react.min.js"></script>
     <script src="../lib/react/react-dom.min.js"></script>
 
-    <script  type="text/babel" src="../js/portfolioMain.js"></script>
-    <script  type="text/babel" src="../js/project.js?v13"></script>
+    <script  type="text/babel" src="../js/portfolioMain.js?v2"></script>
+    <script  type="text/babel" src="../js/project.js?v15"></script>
     
 </head>
 
